--- a/index.html
+++ b/index.html
@@ -268,29 +268,33 @@
         padding: 18px 4px;
       }
       .cover-photo {
-        height: 120px;
+        height: 110px;
+        object-fit: cover;
+        margin-bottom: -40px;
       }
       .profile-photo {
-        width: 90px;
-        height: 90px;
-        margin-top: -45px;
+        width: 70px;
+        height: 70px;
+        margin-top: -35px;
       }
-      .skills-list {
-        gap: 8px;
-      }
-      .project-thumb {
-        width: 60px;
-        height: 40px;
+      h1.name {
+        font-size: 1.3rem;
+        margin-top: 10px;
       }
     }
     @media (max-width: 479.98px) {
       .cover-photo {
-        height: 70px;
+        height: 60px;
+        margin-bottom: -25px;
       }
       .profile-photo {
-        width: 60px;
-        height: 60px;
-        margin-top: -30px;
+        width: 45px;
+        height: 45px;
+        margin-top: -20px;
+      }
+      h1.name {
+        font-size: 1rem;
+        margin-top: 6px;
       }
       .about-box, .project-preview, .overview-box, .contact-form-section {
         padding: 10px 6px;
