--- a/social.html
+++ b/social.html
@@ -141,7 +141,7 @@
 <main class="container">
   <h1>Connect With Me</h1>
   <div class="d-flex justify-content-center flex-wrap gap-4">
-    <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" class="btn btn-social btn-facebook" aria-label="Facebook">
+    <a href="https://www.facebook.com/2468CSE/" target="_blank" rel="noopener noreferrer" class="btn btn-social btn-facebook" aria-label="Facebook">
       <i class="bi bi-facebook"></i> FB Profile
     </a>
     <a href="https://www.linkedin.com/in/srcse/" target="_blank" rel="noopener noreferrer" class="btn btn-social btn-linkedin" aria-label="LinkedIn">
@@ -168,3 +168,4 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
