project-list.html

--- a/project-list.html
+++ b/project-list.html
@@ -241,7 +241,6 @@
     </div>
   </div>
 
- <!-- ...existing code... -->
   <!-- Project 3 -->
   <div class="project-row">
     <img src="BCC.PNG" alt="BCC Project Cover" class="project-photo" data-img="BCC.PNG" />
@@ -254,7 +253,6 @@
     </div>
   </div>
   
-<!-- ...existing code... -->
   <!-- Popup Modal for Image -->
   <div class="modal-img-bg" id="imgModal">
     <div class="modal-img-content">
@@ -262,7 +260,8 @@
       <img src="" alt="Project Large View" id="modalImg" style="max-width:90vw;max-height:80vh;display:block;object-fit:contain;background:#111;border-radius:10px;" />
     </div>
   </div>
-<!-- ...existing code... -->
+</main>
+
 <script>
   // Popup image modal logic
   const modal = document.getElementById('imgModal');
