--- a/index.html
+++ b/index.html
@@ -38,19 +38,22 @@
       box-shadow: 0 8px 40px #000b;
       position: relative;
     }
+    /* Default (desktop) styles */
     .cover-photo {
       width: 100%;
-      height: 320px;
+      height: 220px;
       object-fit: cover;
       border-radius: 18px;
       box-shadow: 0 4px 24px #3399ff33;
       margin-bottom: -70px;
       background: #222;
       border: 2px solid #292929;
+      display: block;
     }
+
     .profile-photo {
-      width: 200px;
-      height: 200px;
+      width: 140px;
+      height: 140px;
       object-fit: cover;
       border-radius: 50%;
       border: 5px solid #fff;
@@ -61,17 +64,18 @@
       position: relative;
       z-index: 2;
     }
+
     h1.name {
-      background: linear-gradient(45deg, #000000, #1a6ed8);
       text-align: center;
       font-size: 2.5rem;
       font-weight: 800;
-      color: #efeae9;
+      color: #3399ff;
       margin-top: 18px;
       letter-spacing: 0.08em;
       text-shadow: 0 2px 8px #3399ff33;
       user-select: none;
     }
+
     p.description {
       text-align: center;
       color: #b6eaff;
@@ -268,33 +272,40 @@
         padding: 18px 4px;
       }
       .cover-photo {
-        height: 110px;
-        object-fit: cover;
-        margin-bottom: -40px;
+        height: 170px;
+        margin-bottom: -55px;
       }
       .profile-photo {
-        width: 70px;
-        height: 70px;
-        margin-top: -35px;
+        width: 110px;
+        height: 110px;
+        margin-top: -55px;
       }
       h1.name {
-        font-size: 1.3rem;
+        font-size: 1.4rem;
         margin-top: 10px;
+      }
+      p.description {
+        font-size: 1rem;
+        margin-top: 8px;
       }
     }
     @media (max-width: 479.98px) {
       .cover-photo {
-        height: 60px;
+        height: 90px;
         margin-bottom: -25px;
       }
       .profile-photo {
-        width: 45px;
-        height: 45px;
+        width: 55px;
+        height: 55px;
         margin-top: -20px;
       }
       h1.name {
         font-size: 1rem;
         margin-top: 6px;
+      }
+      p.description {
+        font-size: 0.93rem;
+        margin-top: 5px;
       }
       .about-box, .project-preview, .overview-box, .contact-form-section {
         padding: 10px 6px;
