--- a/project-list.html
+++ b/project-list.html
@@ -241,7 +241,32 @@
     </div>
   </div>
 
+
   <!-- Project 3 -->
+  <div class="project-row">
+    <img src="project 04.PNG" alt="BCC Project Cover" class="project-photo" data-img="project 04.PNG" />
+    <div class="project-info">
+      <div class="project-title">Smart CGPA Calculator</div>
+      <div class="project-description">
+        Smart CGPA Calculator is a lightweight web app for Bangladeshi Honours students to quickly compute current CGPA, predict required final marks, and estimate the average needed to reach a target CGPA. It uses the BAIUST grading scale and runs in-browser—no signup, just plug in your course/marks and go.
+      </div>
+      <a href="https://srsmartcgpa.netlify.app/" target="_blank" rel="noopener noreferrer" class="btn-visit">View Project</a>
+    </div>
+  </div>
+
+  <!-- Project 4 -->
+  <div class="project-row">
+    <img src="Project 05.PNG" alt="BCC Project Cover" class="project-photo" data-img="Project 05.PNG" />
+    <div class="project-info">
+      <div class="project-title">Smart Cover Page Generator</div>
+      <div class="project-description">
+        Smart Cover Page Generator is a simple web tool that lets students auto-create a clean university cover page: fill fields (department, report type, course, submission date, student/teacher info), then download the formatted page as a PDF
+        </div>
+      <a href="https://smartcoverpage.netlify.app/" target="_blank" rel="noopener noreferrer" class="btn-visit">View Project</a>
+    </div>
+  </div>
+  
+  <!-- Project 5 -->
   <div class="project-row">
     <img src="BCC.PNG" alt="BCC Project Cover" class="project-photo" data-img="BCC.PNG" />
     <div class="project-info">
@@ -252,6 +277,8 @@
       <a href="#" target="_blank" rel="noopener noreferrer" class="btn-visit">View Project</a>
     </div>
   </div>
+
+  
   
   <!-- Popup Modal for Image -->
   <div class="modal-img-bg" id="imgModal">
