--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
     <a href="https://github.com/" target="_blank" title="GitHub"><i class="bi bi-github"></i></a>
     <a href="https://linkedin.com/" target="_blank" title="LinkedIn"><i class="bi bi-linkedin"></i></a>
     <a href="https://facebook.com/" target="_blank" title="Facebook"><i class="bi bi-facebook"></i></a>
-    <a href="mailto:shawon@email.com" title="Email"><i class="bi bi-envelope-fill"></i></a>
+    <a href="mailto:shawonroycse@email.com" title="Email"><i class="bi bi-envelope-fill"></i></a>
   </div>
 
   <!-- Overview Section -->
@@ -400,7 +400,7 @@
     <div class="overview-box">
       <span class="overview-icon"><i class="bi bi-envelope-fill"></i></span>
       <div>
-        <strong>Contact:</strong> Email: shawon@email.com<br>
+        <strong>Contact:</strong> Email: shawonroycse@email.com<br>
         <a href="contact.html" class="btn-visit btn-sm mt-2">More Contact Info</a>
       </div>
     </div>
